--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /[Uu]ser[Ss]ettings/
 *.log
 /Prototype 1/Library/
+/Prototype 2/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
