--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /Prototype 1/Library/
 /Prototype 2/Library/
 /Prototype 3/Library/
+/Prototype 4/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
