--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 /[Uu]ser[Ss]ettings/
 *.log
 /Prototype 1/Library/
+/Prototype 2/Library/
+/Prototype 3/Library/
+/Prototype 4/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
